--- a/src/assets/styles/import.styl
+++ b/src/assets/styles/import.styl
@@ -1,4 +1,4 @@
-$textColor = alpha(#000, .8)
+$textColor = #333
 
 $textFontFamily = "YakuHanJP_Noto", "Noto Sans JP", sans-serif
 $designFontFamily = "Barlow", sans-serif
