:art: ヘッダーとフッターのHTMLを整理

--- a/src/assets/styles/import.styl
+++ b/src/assets/styles/import.styl
@@ -1,4 +1,4 @@
 $textColor = #333
 
-$textFontFamily = "YakuHanJP_Noto", "Noto Sans JP", sans-serif
-$designFontFamily = "Barlow", sans-serif
+$jpFontFamily = "YakuHanJP_Noto", "Noto Sans JP", sans-serif
+$enFontFamily = "Barlow", sans-serif
