:art: グローバルスタイルを追加

--- a/src/assets/styles/global.styl
+++ b/src/assets/styles/global.styl
@@ -5,3 +5,13 @@
 body
   font-family: $textFontFamily
   color: $textColor
+
+ul[class],
+ol[class]
+  list-style: none
+  padding-left: 0
+
+a[class]
+  display: block
+  text-decoration: none
+  color: inherit
