--- a/src/assets/styles/import.styl
+++ b/src/assets/styles/import.styl
@@ -2,3 +2,9 @@ $textColor = #333
 
 $jpFontFamily = "YakuHanJP_Noto", "Noto Sans JP", sans-serif
 $enFontFamily = "Barlow", sans-serif
+
+
+flexCenter()
+  display: flex
+  justify-content: center
+  align-items: center
