:art: yakuhanjpを使わないように変更

--- a/src/assets/styles/import.styl
+++ b/src/assets/styles/import.styl
@@ -1,6 +1,6 @@
 $textColor = #333
 
-$jpFontFamily = "YakuHanJP_Noto", "Noto Sans JP", sans-serif
+$jpFontFamily = "Noto Sans JP", sans-serif
 $enFontFamily = "Barlow", sans-serif
 
 
