:art: yusei magicを採用してみた

--- a/src/assets/styles/import.styl
+++ b/src/assets/styles/import.styl
@@ -1,8 +1,10 @@
 $textColor = #333
 $metaColor = #666
 
-$jpFontFamily = "Noto Sans JP", sans-serif
-$enFontFamily = "Barlow", sans-serif
+$textFontFamily = "Noto Sans JP", sans-serif
+$jpFontFamily = "Yusei Magic", sans-serif
+$enFontFamily = $jpFontFamily
+// $enFontFamily = "Barlow", sans-serif
 
 
 flexCenter()
