:art: メンバーセクションを追加

--- a/src/assets/styles/global.styl
+++ b/src/assets/styles/global.styl
@@ -16,3 +16,10 @@ a[class]
   display: block
   text-decoration: none
   color: inherit
+
+button[class]
+  border: none
+  outline: none
+  background-color: transparent
+  cursor: pointer
+  appearance: none
